--- a/exercicio1/forms.html
+++ b/exercicio1/forms.html
@@ -26,7 +26,7 @@
         <input type="radio" id="cor-verde"/> <label for="cor-verde"> verde</label>
         <input type="radio" id="cor-azul"/> <label for="cor-azul"> azul</label>
         <br/>
-        <button type="button">Confirmar cadastro</button>
+        <button type="submit">Confirmar cadastro</button>
     </form>
 </body>
 </html>
